# libgpod

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  compile_commands.json  config.h.in  vckpg.json  vcpkg.json  xmake.lua
.cache/clangd/index/: config.h.49AECDBD2E85C756.idx  db-artwork-debug.c.8BF2DF40B08DBA6B.idx  db-artwork-debug.c.BFF5AAF1F7B3FC3D.idx  db-artwork-debug.h.6F21DE0546A14C34.idx  db-artwork-debug.h.D4EE0A528A9A257A.idx  db-artwork-parser.c.22C4436BD33B078A.idx  db-artwork-parser.c.88E417058E7C8323.idx  db-artwork-parser.h.0B7D69E2B4DA41B7.idx  db-artwork-parser.h.6E9281C072F6BE7F.idx  db-artwork-writer.c.0D41CAB70C5993EC.idx  db-artwork-writer.c.38266A0BA51435C3.idx  db-image-parser.c.689D8669DECC7C42.idx  db-image-parser.c.F148C11CB138034A.idx  db-image-parser.h.71FB8C702E73053A.idx  db-image-parser.h.97FC3AEC8915ADDB.idx  db-itunes-parser.h.455AA05FBDEAAF0D.idx  db-itunes-parser.h.51B936BE8ABA012C.idx  db-parse-context.c.5A6D4D8D9DA29624.idx  db-parse-context.c.F91788FCF80F71AD.idx  db-parse-context.h.1A1950478C5DC175.idx  db-parse-context.h.63207A5C0865FED4.idx  get-timezone.c.E85AC4DCFFD81B43.idx  itdb.h.044B7852DB59FF65.idx  itdb.h.216E4B4CC015185C.idx  itdb_artwork.c.667348C429704A15.idx  itdb_artwork.c.DF32FBF59FC94801.idx  itdb_chapterdata.c.317E9EAF54C25BD2.idx  itdb_chapterdata.c.8FAAFDC88D0577C7.idx  itdb_device.c.016AA0C0775F5CD0.idx  itdb_device.c.77A9F95838406C6E.idx  itdb_device.h.A360C95991972602.idx  itdb_device.h.BD39C33B2E8F2947.idx  itdb_endianness.h.697256E3AC8DAA31.idx  itdb_endianness.h.7CF5CC29AC7D419D.idx  itdb_hash58.c.83F297F54B72BAD7.idx  itdb_hash58.c.BB2CCB3453A192DE.idx  itdb_hash72.c.09EA21B5155C55ED.idx  itdb_hash72.c.BAC86DECBB94565F.idx  itdb_hashAB.c.05EC984B0522BA55.idx  itdb_hashAB.c.E7F1D9AAD44E53FA.idx  (+57 more)
.xmake/linux/x86_64/: xmake.conf
.xmake/linux/x86_64/cache/: config  detect  history  option  package  toolchain
src/: itdb.h  itdb_sqlite.c  itdb_tzinfo.c  ithumb-writer.c  unistd.h  win_compat.h
tests/: test-ls.c  test_mocka.c
tools/: ipod-usb.c
